# pymcp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pymcp/: __init__.py  cli.py  config.py  history.py
pymcp/llm/: __init__.py  anthropic.py  google.py  ollama.py  openai.py  provider.py
pymcp/mcp/: __init__.py  client.py  types.py
pymcp/utils/: __init__.py  rendering.py  terminal.py
