[project]
name = "pymcp"
version = "0.1.0"
description = ""
authors = [
    {name = "ruo-lee",email = "comsa333@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "anthropic (>=0.49.0,<0.50.0)",
    "openai (>=1.73.0,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "typer (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mcp-python (>=0.1.4,<0.2.0)",
    "click (>=8.1.8,<9.0.0)",
    "textual (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.5"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
pymcp = "pymcp.cli:app"
